--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,4 +1,4 @@
-.intro
+.intro-about
   .text-center.py-24.paddingx-content.text-white
     %h1 About Craft Academy
     %br
@@ -25,7 +25,7 @@
   .button-row
     %br
     %p
-      %a.apply_button{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
+      %a.static_page_button{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
 
 %section.text-center.paddingx-content.py-24
   %h3 Directions
