--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -372,3 +372,29 @@ body {
 		@apply opacity-75 ;
 	}
 }
+
+.carousel {
+	@apply px-2;
+
+	a {
+		text-decoration: none;
+		display: inline-block;
+		padding: 8px 16px;
+	}
+	
+	a:hover {
+		background-color: #ddd;
+		color: black;
+	}
+	
+	.prev {
+		background-color: #f1f1f1;
+		color: black;
+	}
+	
+	.next {
+		background-color: #4CAF50;
+		color: white;
+	}
+}
+  
