--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,34 @@
     background-color: rgb(50, 177, 165) !important;
 }  
 
+
+.carousel-control:nth-of-type(1) {
+    height: 100px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+}
+
+.carousel-control:nth-of-type(2) {
+    height: 100px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+}
+.carousel-control svg {
+    height: 40px;
+    width: 95px;
+}
+
+.carousel-caption {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    left: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
