--- a/app/views/partials/_carousell.html.haml
+++ b/app/views/partials/_carousell.html.haml
@@ -1,11 +1,19 @@
-.carousel{role: "listbox"}
-    .carousel-inner{role: "listbox"}
-        - @entries.each_with_index do |entry, index|
-            - image_name = "ca_marketing_#{index + 1}.jpg"
-            .item
-                = image_tag image_name, class: 'faux'
-                .carousel-caption
-                    %h1= entry
-    / Controls
-    %a.carousel-control.prev= "Previous"
-    %a.carousel-control.next= "Next"
+.carousel
+    - @entries.each_with_index do |entry, index|
+        - image_name = "ca_marketing_#{index + 1}.jpg"
+        .carousel-item
+            = image_tag image_name, class: 'faux'
+            .carousel-caption
+                %h1= entry
+/ Controls
+%a.carousel-control.prev
+    %svg#Layer_1{:style => "enable-background:new 0 0 24 42;", :version => "1.1", :viewbox => "0 0 24 42", :x => "0px", "xml:space" => "preserve", :xmlns => "http://www.w3.org/2000/svg", "xmlns:xlink" => "http://www.w3.org/1999/xlink", :y => "0px"}
+        :css
+            .st0{fill:none;stroke:#FFFFFF;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+        %polyline.st0{:points => "21,39 3,21 21,3 "}
+
+%a.carousel-control.next
+    %svg#Layer_1{:style => "enable-background:new 0 0 24 42;", :version => "1.1", :viewbox => "0 0 24 42", :x => "0px", "xml:space" => "preserve", :xmlns => "http://www.w3.org/2000/svg", "xmlns:xlink" => "http://www.w3.org/1999/xlink", :y => "0px"}
+        :css
+            .st0{fill:none;stroke:#FFFFFF;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+        %polyline.st0{:points => "3,2 21,20 3,38 "}
