styled intro content on curriculum page

--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -363,6 +363,18 @@ body {
 	background-image: url(https://assets.craftacademy.se/images/backgrounds/splash_3.jpg);
 }
 
+// Curriculum page
+
+.intro-curriculum {
+	h1 {
+		font-size: 43px;
+	}
+
+	p {
+		font-size: 19px;
+	}
+}
+
 // Static pages common
 
 .static_page_button {
