--- a/app/views/pages/employers.html.haml
+++ b/app/views/pages/employers.html.haml
@@ -11,17 +11,17 @@
   .flex
     .column
       .icon
-        = image_tag iconHelper('icon-heart.png')
+        = image_tag icon_helper('icon-heart.png')
         %span.caption.text-transform Passion
       %p Driven, curious and engaged. Our students, by graduating from Craft Academy, have shown that they are in charge of their own development. By dedicating twelve weeks of their lives to learning to code - and putting their lives on hold - they have proven their desire to work in the field.
     .column
       .icon
-        = image_tag iconHelper('icon-craft.png')
+        = image_tag icon_helper('icon-craft.png')
         %span.caption.text-transform Competence
       %p During their time at Craft Academy, our students learn at least two programming languages and three frameworks. They practice Test-Driven Development and work with Agile principles on a wide range of projects.
     .column
       .icon
-        = image_tag iconHelper('icon-briefcase.png')
+        = image_tag icon_helper('icon-briefcase.png')
         %span.caption.text-transform Experience
       %p Everyone was a beginner once. What separates our students from other junior developers is that bootcamp participants begin writing code even before day one, and every day during the course. When they graduate, they have at least two fully-developed major projects in their portfolio.
 
