--- a/app/views/pages/curriculum.html.haml
+++ b/app/views/pages/curriculum.html.haml
@@ -7,7 +7,7 @@
           Our programs follow detailed and proven course plans - developed by professional programmers and based on real-life projects and the latest industry practices.
           Good programmers and security specialists are made through practice. At Craft Academy we put the greatest focus on actually writing and testing code and using technology - every day, constantly increasing complexity. We know that this is the only way to learn new skills. Theory comes after practice.
 
-%section.text-center.paddingx-content.py-24
+%section.text-center.paddingx-content.pt-24
   %h3.text-orange-ca.pb-6.uppercase Full Stack Web Developer Bootcamp 
   %h4.text-grey-dark.pb-6.uppercase 4 weeks prep course & 12 weeks of camp
   %p.pb-3 Learn Agile software development methodologies along with modern frameworks including: HTML5, Javascript, Ruby on Rials, AngularJS, and Ionic. (See below for more details)
@@ -20,3 +20,18 @@
   %p.pb-3 Digitalization leads to heightened exposure to cyber-attacks, and Cyber Security Specialists has become one of the most mission critical roles in the many industries. The number and frequency of cyber attacks is steadily on the rise and cyber criminals becoming ever more sophisticated. Achieving a secure infrastructure requires that it is designed, built and operated by people who understand the threats, know the security requirements and have the skills to build and operate secure systems in general. The demand for employees with cybersecurity training is higher than ever. Craft Academy’s Cyber Security Specialist Bootcamp is designed to provide a both a holistic as well as detailed knowledge of key technologies and techniques required to improve the security of existing computer systems but also the design of new systems with security protections.
   %hr.border-b-4
 
+%section.paddingx-content.py-6.curriculum-list
+  .sidebar
+    .list
+      - list_curriculum.each_with_index do |week, index|
+        %p
+          %a.text-black.no-underline{href: "#definition-#{index}"}= week["title"]
+  .main
+    - list_curriculum.each_with_index do |week, index|
+      %h4.text-ca-grey.uppercase.py-4{id: "definition-#{index}"}= week["title"]
+      .font-bold.pb-2= week["summary"]
+      = week["blurb"]
+
+%section.paddingx-content.py-6
+  -# Start by creating a course dates yaml file and service file to read it and then a helper file to display it.
+  
