extracts apply section to partial adds missing text from course dates section

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -14,18 +14,7 @@
     %br
     %p There is a strong need for web developers in Sweden and throughout the world. We train programmers who not only write great code, but who understand the industry's conventions, problem solve with intention, and are ready to join the workforce and be a productive member of a team. We believe that coding is a craft, not just the symbols you put into a program. To that end, we teach an ambitious array of coding skills, introducing students to dozens of tools and two coding languages, but we also teach coding methods like Agile and Test-Driven Development. These practices mold developers who will thrive in the real world.
 %hr
-.apply-section.text-center.paddingx-content.py-24.text-white
-  .centered-row
-    .column
-      %h2 Apply now
-      %br
-      %p
-        %strong
-          We start a new course every eight weeks and continuously review and accept applicants. The application process can take up to two weeks, so please apply in time!
-  .button-row
-    %br
-    %p
-      %a.static_page_button{href: "https://craftacademy.typeform.com/to/hkkxKQ"} Apply Now
+= render partial: 'partials/apply'
 
 %section.text-center.paddingx-content.py-24
   %h3 Directions
