--- a/app/views/pages/curriculum.html.haml
+++ b/app/views/pages/curriculum.html.haml
@@ -1,7 +1,7 @@
 %section{style: "background-image: url(#{background_helper('splash_3.jpg')});"}
 	.intro-curriculum
 		.text-center.py-24.paddingx-content.text-white
-			%h1 Course Plans
+			%h1.uppercase Course Plans
 			%p
 				%strong
 					Our programs follow detailed and proven course plans - developed by professional programmers and based on real-life projects and the latest industry practices.
