adds course fees section

--- a/app/javascript/css/tailwind.scss
+++ b/app/javascript/css/tailwind.scss
@@ -37,25 +37,33 @@
  */
 
 @font-face {
-font-family: 'gotham-light';
-src: url('//assets.craftacademy.se/fonts/gotham-light-webfont.eot');
-src: url('//assets.craftacademy.se/fonts/gotham-light-webfont.eot?#iefix') format('embedded-opentype'),
-	url('//assets.craftacademy.se/fonts/gotham-light-webfont.woff') format('woff'),
-	url('//assets.craftacademy.se/fonts/gotham-light-webfont.ttf') format('truetype'),
-	url('//assets.craftacademy.se/fonts/gotham-light-webfont.svg#linea-arrows-10') format('svg');
-font-weight: normal;
-font-style: normal;
+	font-family: "gotham-light";
+	src: url("//assets.craftacademy.se/fonts/gotham-light-webfont.eot");
+	src: url("//assets.craftacademy.se/fonts/gotham-light-webfont.eot?#iefix")
+			format("embedded-opentype"),
+		url("//assets.craftacademy.se/fonts/gotham-light-webfont.woff")
+			format("woff"),
+		url("//assets.craftacademy.se/fonts/gotham-light-webfont.ttf")
+			format("truetype"),
+		url("//assets.craftacademy.se/fonts/gotham-light-webfont.svg#linea-arrows-10")
+			format("svg");
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-font-family: 'gotham-medium';
-src: url('//assets.craftacademy.se/fonts/gotham-medium-webfont.eot');
-src: url('//assets.craftacademy.se/fonts/gotham-medium-webfont.eot?#iefix') format('embedded-opentype'),
-	url('//assets.craftacademy.se/fonts/gotham-medium-webfont.woff') format('woff'),
-	url('//assets.craftacademy.se/fonts/gotham-medium-webfont.ttf') format('truetype'),
-	url('//assets.craftacademy.se/fonts/gotham-medium-webfont.svg#linea-arrows-10') format('svg');
-font-weight: normal;
-font-style: normal;
+	font-family: "gotham-medium";
+	src: url("//assets.craftacademy.se/fonts/gotham-medium-webfont.eot");
+	src: url("//assets.craftacademy.se/fonts/gotham-medium-webfont.eot?#iefix")
+			format("embedded-opentype"),
+		url("//assets.craftacademy.se/fonts/gotham-medium-webfont.woff")
+			format("woff"),
+		url("//assets.craftacademy.se/fonts/gotham-medium-webfont.ttf")
+			format("truetype"),
+		url("//assets.craftacademy.se/fonts/gotham-medium-webfont.svg#linea-arrows-10")
+			format("svg");
+	font-weight: normal;
+	font-style: normal;
 }
 
 /**
@@ -94,92 +102,89 @@ body {
 }
 
 .ca-button {
-	@apply bg-orange-ca text-white ml-5 py-2 px-3 no-underline whitespace-no-wrap ;
-	border-radius: .10rem;
+	@apply bg-orange-ca text-white ml-5 py-2 px-3 no-underline whitespace-no-wrap;
+	border-radius: 0.1rem;
 }
 
 .ca-button:hover {
-	@apply bg-orange-ca-light ;
+	@apply bg-orange-ca-light;
 }
 
 .ca-button:focus {
-	@apply shadow-outline outline-none ;
+	@apply shadow-outline outline-none;
 }
 
 .ca-button-transparent {
-	@apply flex-no-shrink border-transparent border-4 text-grey text-sm py-1 px-2 rounded ;
+	@apply flex-no-shrink border-transparent border-4 text-grey text-sm py-1 px-2 rounded;
 }
 
 .ca-button-transparent:hover {
-	@apply text-grey-darker ;
+	@apply text-grey-darker;
 }
 
 .ca-header-link {
-	@apply inline-block py-2 px-3 text-grey-darkest no-underline ;
+	@apply inline-block py-2 px-3 text-grey-darkest no-underline;
 }
 
 .ca-header-link:hover {
-	@apply text-grey-darker ;
+	@apply text-grey-darker;
 }
 
 .ca-footer-header {
-	@apply inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide ;
+	@apply inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide;
 }
 
 .ca-footer-link {
-	@apply inline-block py-2 px-3 text-white no-underline ;
+	@apply inline-block py-2 px-3 text-white no-underline;
 }
 
 .ca-footer-link:hover {
-	@apply text-grey-lighter ;
+	@apply text-grey-lighter;
 }
 
 .ca-footer-icon-link {
-	@apply  block flex items-center text-white mr-6 no-underline ;
+	@apply block flex items-center text-white mr-6 no-underline;
 }
 
 .ca-footer-icon-link:hover {
-	@apply  text-grey-lighter ;
+	@apply text-grey-lighter;
 }
 
-
 .ca-footer-copyright {
-	@apply pt-4 mt-4 text-xs text-white border-t border-white text-center ;
+	@apply pt-4 mt-4 text-xs text-white border-t border-white text-center;
 }
 // Form elements
 
 .ca-form {
-	@apply w-full max-w-md ;
+	@apply w-full max-w-md;
 }
 
 // Field wrappers
 .ca-field-wrapper {
-	@apply flex flex-wrap -mx-3 mb-6 ;
+	@apply flex flex-wrap -mx-3 mb-6;
 }
 
-
 .ca-field-full-width {
-	@apply w-full px-3 mb-6 ;
+	@apply w-full px-3 mb-6;
 
 	@screen md {
-		@apply mb-0 ;
+		@apply mb-0;
 	}
 }
 
 // Field elements
 
 .ca-form-label {
-	@apply block uppercase tracking-wide text-grey-darker text-xs mb-2 ; 
+	@apply block uppercase tracking-wide text-grey-darker text-xs mb-2;
 }
 
 .ca-form-input-field {
-	@apply appearance-none block w-full bg-grey-lighter text-grey-darker rounded py-3 px-4 mb-3 leading-tight ;
+	@apply appearance-none block w-full bg-grey-lighter text-grey-darker rounded py-3 px-4 mb-3 leading-tight;
 
 	&:focus {
 		@apply outline-none bg-white;
 	}
 }
-
 
 // Modal elements
 
@@ -202,23 +207,23 @@ body {
 }
 
 .ca_modal_background {
-	@apply  fixed z-50 pin overflow-auto bg-smoke-dark flex ;
+	@apply fixed z-50 pin overflow-auto bg-smoke-dark flex;
 }
 
 .ca_modal_medium {
-	@apply  fixed shadow-inner max-w-md pin-b pin-x align-top m-auto justify-end p-8 bg-white w-full flex flex-col;
+	@apply fixed shadow-inner max-w-md pin-b pin-x align-top m-auto justify-end p-8 bg-white w-full flex flex-col;
 
 	@screen md {
-		@apply relative justify-center rounded h-auto shadow ;
+		@apply relative justify-center rounded h-auto shadow;
 	}
 }
 
 // Let's think about how to address this (screen sizes and modal sizes)
 .ca_modal_large {
-	@apply  fixed shadow-inner max-w-lg pin-b pin-x align-top m-auto justify-end p-8 bg-white w-full flex flex-col;
+	@apply fixed shadow-inner max-w-lg pin-b pin-x align-top m-auto justify-end p-8 bg-white w-full flex flex-col;
 
 	@screen md {
-		@apply relative justify-center rounded h-auto shadow ;
+		@apply relative justify-center rounded h-auto shadow;
 	}
 }
 
@@ -231,13 +236,12 @@ body {
 .skill-grid {
 	display: grid;
 	grid-template-columns: 50% 50%;
-	margin-top: 25px
+	margin-top: 25px;
 }
-
 
 // About us page
 .intro-about {
-	background-image: url(https://assets.craftacademy.se/images/backgrounds/splash_1.jpg);    
+	background-image: url(https://assets.craftacademy.se/images/backgrounds/splash_1.jpg);
 }
 
 .apply-section {
@@ -249,9 +253,8 @@ body {
 }
 
 .paddingx-content {
-
 	@apply px-24;
-	
+
 	@screen md {
 		@apply px-32;
 	}
@@ -263,9 +266,7 @@ body {
 	@screen xl {
 		@apply px-64;
 	}
-	
 }
-
 
 .vertical-tabs-container {
 	@apply bg-white w-32 rounded-sm border border-solid border-grey-light-shade;
@@ -275,7 +276,7 @@ body {
 	@apply float-left w-32;
 
 	&:hover {
-		@apply opacity-75 ;
+		@apply opacity-75;
 	}
 
 	button {
@@ -306,7 +307,7 @@ body {
 	@apply m-4;
 
 	p {
-	    @apply pt-4 text-justify;
+		@apply pt-4 text-justify;
 	}
 
 	.icon {
@@ -332,14 +333,14 @@ body {
 	grid-row-gap: 30px;
 	@apply text-left border-b;
 
-	:nth-child(1n+4) {
+	:nth-child(1n + 4) {
 		@apply pb-5;
 	}
 	.grid-item:before {
-    content: '';
+		content: "";
 		@apply my-5 block border-b;
 	}
-	
+
 	.grid-item {
 		h4 {
 			@apply text-ca-grey text-center;
@@ -351,7 +352,7 @@ body {
 
 		ul {
 			@apply list-reset;
-	
+
 			li {
 				@apply px-3 py-4;
 			}
@@ -378,11 +379,11 @@ body {
 .curriculum-list {
 	display: grid;
 	grid-template-columns: 250px auto;
-	
+
 	.main {
 		grid-column-start: -1;
 	}
-	
+
 	.sidebar {
 		.list {
 			@apply sticky pin-t pt-4;
@@ -403,25 +404,41 @@ body {
 }
 
 .course-fees {
+	@media screen and (max-width: 992px) {
+		.two-columns {
+			.left-column {
+				// @apply min-w-half flex-wrap;
+			}
 
-	.left-column {
-		@apply min-w-half flex-wrap ;
-	}
-
-	.right-column {
-		@apply min-w-half ;
-	}
-	@screen md {
-		@apply min-w-0;
-		.left-column {
-			@apply pl-24 pr-6 ;
+			.right-column {
+				// @apply min-w-half;
+				h3 {
+					@apply pt-6;
+				}
+			}
 		}
-		
-		.right-column {
-			@apply  pr-24 pl-6 ;
+
+		.text {
+			@apply text-left;
 		}
 	}
 
+	@screen lg {
+		.two-columns {
+			@apply flex;
+			.left-column {
+				@apply pl-24 pr-6;
+			}
+
+			.right-column {
+				@apply pr-24 pl-6;
+			}
+		}
+
+		.text {
+			@apply px-48;
+		}
+	}
 }
 
 // Static pages common
@@ -430,6 +447,6 @@ body {
 	@apply no-underline border rounded-lg py-4 px-6 text-white;
 
 	&:hover {
-		@apply opacity-75 ;
+		@apply opacity-75;
 	}
 }
